--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-# Default code owner for \<reponame\>
-benmont #replace for \<reponame\>
+# Default code owner for \<pcba-fct\>
+kirstyong #replace for \<pcba-fct\>
